# xspectrampoline

./: .gitignore  Makefile  README.md  dist-package.py  pyproject.toml  setup.py
.github/workflows/: package.yml
test/: test_basics.py
xspectrampoline/: LINKEDFILES  __init__.py  hello.txt
xspectrampoline/helpers/: __init__.py
